--- a/frontend/assets/stylesheets/pages/_tier.scss
+++ b/frontend/assets/stylesheets/pages/_tier.scss
@@ -48,8 +48,7 @@ $current-indicator: rem(47px);
 }
 
 .package {
-    @include border-radius(4px);
-    background-color: #ffffff;
+    background-color: $c-neutral7;
     position: relative;
 
     // .package is a flexbox too to
@@ -239,10 +238,9 @@ $current-indicator: rem(47px);
     content: 'Plus:';
     display: block;
     @include fs-bodyCopy(1);
-    color: $c-neutral3;
-    border-bottom: 1px solid $c-neutral3;
+    color: $c-neutral1;
     @include rem((
-        margin-bottom: $gs-baseline
+        margin-bottom: $gs-baseline/2
     ));
 }
 
@@ -318,7 +316,7 @@ $current-indicator: rem(47px);
 
     .price-info__sub-detail {
         @include fs-bodyCopy(1);
-        color: $c-neutral3;
+        color: #666666;
         display: block;
     }
 
@@ -350,10 +348,9 @@ $current-indicator: rem(47px);
             min-height: 120px
         ));
         @include rem((
-            padding-top: $gs-gutter,
+            padding-top: $gs-gutter/2,
             min-height: 60px
         ));
-        border-top: 1px solid $c-neutral5;
     }
 
     @include mq($from: tablet, $until: desktop) {
