--- a/frontend/assets/stylesheets/layout/_footer.scss
+++ b/frontend/assets/stylesheets/layout/_footer.scss
@@ -8,10 +8,11 @@ footer {
     @include mq(tablet) {
         bottom: 0;
     }
+
     .copy {
         @include fs-data(6);
         text-align: center;
-        margin: 48px 0 0;
+        margin: rem(48px) 0 0;
     }
 }
 
@@ -19,7 +20,7 @@ footer {
    ========================================================================== */
 
 .guardian-logo-footer {
-    margin-top: $gs-baseline * .75;
+    margin-top: rem($gs-baseline * .75);
     float: right;
     line-height: 0;
 }
@@ -28,9 +29,7 @@ footer {
    ========================================================================== */
 
 .l-footer {
-    @include rem((
-        padding: 0 0 ($gs-baseline/3)*4
-    ));
+    padding: 0 0 rem(($gs-baseline / 3) * 4);
     background: $c-neutral6;
     z-index: 1; // Above side margins
 
@@ -40,30 +39,23 @@ footer {
 
     .gs-container {
         @include mq(desktop) {
-            @include rem((
-                width: gs-span(12)+$gs-gutter*2
-            ));
+            width: rem(gs-span(12) + $gs-gutter * 2);
         }
 
         @include mq(mem-full) {
-            @include rem((
-                width: gs-span(14)+$gs-gutter*2
-            ));
+            width: rem(gs-span(14) + $gs-gutter * 2);
         }
     }
 
     .control {
         float: left;
-        height: 34px;
-        width: 34px;
+        height: rem(34px);
+        width: rem(34px);
     }
 
     .control__info {
         display: inline-block;
-
-        @include rem((
-            padding-left: $gs-gutter/2
-        ));
+        padding-left: rem($gs-gutter / 2);
     }
 }
 
@@ -73,9 +65,7 @@ footer {
 
 .l-footer__banner {
     border-top: 2px solid $c-brandBlue;
-    @include rem((
-        margin-bottom: ($gs-baseline/3)*2
-    ));
+    margin-bottom: rem(($gs-baseline / 3) * 2);
 }
 
 @include mq(tablet) {
@@ -93,12 +83,12 @@ footer {
 .l-footer__secondary {
     @include box-sizing(border-box);
     @include font($sans-serif, normal, 13, 19);
-    padding-right: $gs-gutter / 2;
-    padding-left: $gs-gutter / 2;
+    padding-right: rem($gs-gutter / 2);
+    padding-left: rem($gs-gutter / 2);
 
     @include mq(tablet) {
-        padding-right: $gs-gutter;
-        padding-left: $gs-gutter;
+        padding-right: rem($gs-gutter);
+        padding-left: rem($gs-gutter);
     }
 
     &,
@@ -111,8 +101,8 @@ footer {
     @include fs-bodyHeading(1);
     list-style: none;
     margin: 0;
-    padding-top: $gs-baseline * 2;
-    padding-bottom: $gs-baseline / 2;
+    padding-top: rem($gs-baseline * 2);
+    padding-bottom: rem($gs-baseline / 2);
     @include columns(2);
 
     @include mq(tablet) {
@@ -125,7 +115,7 @@ footer {
 
     a {
         display: inline-block;
-        padding-bottom: $gs-baseline / 2;
+        padding-bottom: rem($gs-baseline / 2);
     }
 }
 
@@ -134,11 +124,11 @@ footer {
 }
 
 .l-footer__misc {
-    padding-top: $gs-baseline / 2;
-    padding-bottom: $gs-baseline * 1.5;
+    padding-top: rem($gs-baseline / 2);
+    padding-bottom: rem($gs-baseline * 1.5);
     border-top: 1px solid $c-neutral4;
 }
 
 .really-serious-copyright {
-    margin-bottom: $gs-baseline/3;
+    margin-bottom: rem($gs-baseline / 3);
 }
