--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -16,12 +16,16 @@
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy"></p>
-                <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
-                <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
-                <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
-                    connects you to the conversations that matter and introduces you to fellow members who share
-                    your interests.</p>
-                <a class="action action--join home-slice__action" href="/join">Join today</a>
+                <div class="js-opt-home-slice-1">
+                    <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
+                    <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
+                </div>
+                <div class="js-opt-home-slice-2">
+                    <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
+                        connects you to the conversations that matter and introduces you to fellow members who share
+                        your interests.</p>
+                    <a class="action action--join home-slice__action" href="/join">Join today</a>
+                </div>
             </div>
         </div>
     </div>
