--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -76,6 +76,8 @@
             ga('send', 'pageview');
         </script>
 
+        <script src="//cdn.optimizely.com/js/2012460034.js"></script>
+
     </head>
     <body>
 
