--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -68,8 +68,16 @@
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', '@Config.googleAnalyticsTrackingId', 'auto', {'allowLinker': true});
+            @if(Config.stage == "PROD") {
+                ga('create', '@Config.googleAnalyticsTrackingId', 'auto', {'allowLinker': true});
+            } else {
+                ga('create', '@Config.googleAnalyticsTrackingId',
+                    {
+                        'allowLinker': true,
+                        'cookieDomain': 'none'
+                    }
+                );
+            }
             ga('require', 'linker');
             ga('linker:autoLink', ['eventbrite.co.uk'] );
 
