--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -100,5 +100,7 @@
         @fragments.footer()
 
         @fragments.javaScriptRequireJS()
+
+        @fragments.analytics.googleRemarketing()
     </body>
 </html>
