Remove label string quotes

--- a/frontend/app/views/fragments/analytics/googleJoinerConversion.scala.html
+++ b/frontend/app/views/fragments/analytics/googleJoinerConversion.scala.html
@@ -4,9 +4,9 @@
 
 @label = {
     @tier match {
-        case Tier.Patron => { "8OIRCKrKtFYQ-fOZzQM" }
-        case Tier.Partner => { "967SCKD1tFYQ-fOZzQM" }
-        case Tier.Friend => { "2Am1CLrttFYQ-fOZzQM" }
+        case Tier.Patron => { 8OIRCKrKtFYQ-fOZzQM }
+        case Tier.Partner => { 967SCKD1tFYQ-fOZzQM }
+        case Tier.Friend => { 2Am1CLrttFYQ-fOZzQM }
     }
 }
 
