Limit postcode field to 20 characters
That's the max size we size we can store in any case.

https://github.com/guardian/membership/pull/613#issuecomment-56808441

```
2014-09-25 11:50:10,563 [ForkJoinPool-1-worker-7] INFO  services.MemberRepository$$anon$1 - {"Success":false,"ErrorString":"Failed Upsert of new Contact: Upsert failed. First exception on row 0; first error: STRING_TOO_LONG,
Mailing Zip/Postal Code: data value too large:
http://www.developermemes.com/wp-content/uploads/2013/03/i-dont-always-test-my-code-but-when-i-do-i-do-it-in-production-stay-on-call-my-friend-thumb.jpg (max length=20):
[MailingPostalCode]","ContactRecord":null}
2
```

--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -99,6 +99,7 @@ county: Option[String], userCountry: Option[String])
                        name="@(formType).postCode"
                        value="@postcode"
                        id="postCode-@(formType)"
+                       maxlength="20"
                        class="text-input text-input--block js-post-code"
                        data-error-message="Please enter your @heading.toLowerCase() post code"
                        data-validation="required"/>
